--- a/web/src/components/PresetSelectionModal.css
+++ b/web/src/components/PresetSelectionModal.css
@@ -25,8 +25,14 @@
 }
 
 .preset-list {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-auto-rows: min-content;
+  gap: 0;
+}
+
+.preset-list > *:last-child:nth-child(odd) {
+  grid-column: 1 / 2;
 }
 
 .preset-item {
@@ -35,10 +41,15 @@
   padding: 10px 12px;
   align-items: flex-start;
   border-top: 1px solid var(--color-border);
+  border-right: 1px solid var(--color-border);
 }
 
-.preset-item:first-of-type {
+.preset-item:nth-child(-n+2) {
   border-top: none;
+}
+
+.preset-item:nth-child(2n) {
+  border-right: none;
 }
 
 .preset-info {
